--- a/css layout/page1.html
+++ b/css layout/page1.html
@@ -4,38 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{ background-color: rgb(33, 77, 53);
-            color: aliceblue;
-        }
+    <link rel="stylesheet" href="page1.css">
+    <title>Page1</title>
 
-        h1{
-            color: rgb(255, 255, 255); 
-            font-family: "YAEnXArs1iQ 0", _fb_, auto;
-             line-height: 77px;"
-        }
-        
-        h3{
-            border-color: rgb(238, 206, 25);
-            background-color: rgb(238, 206, 25);
-            border-radius: 15%;
-            min-inline-size: 1%;
-
-        }
-
-
-    </style>
 </head>
 <body>
-    <h1>Selling Online is vital to business growth.</h1>
+
+<div class="parent">
+<div class="one">
+    <h1>Selling Online <br>
+        is vital to <br>
+        business growth.</h1>
     <h2>2025 Grow Your e-Commerce Conference</h2>
     <br>
     <p>September 16-18, 2025</p>
     <p>
         Paragon One Plaza and Sky Garden
     </p>
+    <br>
 
-    <h3>BOOK NOW FOR EARLY BIRD PRICES</h3>
+    <h3>  BOOK NOW FOR EARLY BIRD PRICES  </h3>
+</div>
+
+<div class="two">
+    <img src="1.png" alt="group of people discussing and brain storming">
+</div>
+</div>
+
 </body>
 </html>
