--- a/css layout/page2.html
+++ b/css layout/page2.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page 2</title>
 </head>
 <body>
-    
+    <h1>The most awaited e-commerce event is back!</h1>
+    <p>Every year, thousands of marketing, sales, and web development professionals gather in and around Venston Bay to discuss the future of e-commerce.</p>
 </body>
 </html>
