--- a/css layout/page2.html
+++ b/css layout/page2.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
+    <link rel="stylesheet" href="page2.css">
 </head>
 <body>
-    <h1>The most awaited e-commerce event is back!</h1>
-    <p>Every year, thousands of marketing, sales, and web development professionals gather in and around Venston Bay to discuss the future of e-commerce.</p>
+    
+<div class="parent">
+    <div class="h">
+    <h1>The most awaited <br>
+        e-commerce event <br>
+        is back!</h1>
+    </div>
+
+    <div class="p">
+        <br>
+    <p>Every year, thousands of marketing, sales, <br>
+       and web development professionals <br>
+       gather in and around Venston Bay to <br>
+       discuss the future of e-commerce.</p>
+    </div>
+    <img src="2.png" alt="group of people brainstorming together">
+
+
+</div>
 </body>
 </html>
