--- a/css layout/page5.html
+++ b/css layout/page5.html
@@ -3,31 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
+    <link rel="stylesheet" href="page5.css">
     <title>Page 5</title>
 </head>
 <body>
+<div class="parent"></div>
+<img src="5.png" alt="group of people">
+
+    <div class="class"></div>
     <h1>Reach Out</h1>
+    <br>
     <p>
-        Conference Secretariat
-        <br>
-
-        163 Woodlands Place
-        <br>
-
-        Algies Bay, Rodney 0920
-        <br>
-
-        123-456-7890
-        <br>
-
-        hello@reallygreatsite.com
-        <br>
-
+        Conference Secretariat<br>
+        163 Woodlands Place<br>
+        Algies Bay, Rodney 0920<br>
+        123-456-7890<br>
+        hello@reallygreatsite.com<br>
         @reallygreatsite
     </p>
- 
- 
+</div>
 
+
+</div>
 </body>
+
 </html>
