--- a/css layout/page1.html
+++ b/css layout/page1.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="parent">
-<div class="one">
+<div class="text">
     <h1>Selling Online <br>
         is vital to <br>
         business growth.</h1>
@@ -26,7 +26,7 @@
     <h3>  BOOK NOW FOR EARLY BIRD PRICES  </h3>
 </div>
 
-<div class="two">
+<div class="image">
     <img src="1.png" alt="group of people discussing and brain storming">
 </div>
 </div>
