--- a/css layout/page1.html
+++ b/css layout/page1.html
@@ -10,26 +10,27 @@
 </head>
 <body>
 
-<div class="parent">
-<div class="text">
-    <h1>Selling Online <br>
-        is vital to <br>
-        business growth.</h1>
-    <h2>2025 Grow Your e-Commerce Conference</h2>
-    <br>
-    <p>September 16-18, 2025</p>
-    <p>
-        Paragon One Plaza and Sky Garden
-    </p>
-    <br>
+    <div class="first">
+        <div class="i1">
+            <img src="1.png" alt="group of people discussing and brain storming">
+        </div>  
+        <div class="t1">
+            <h1>Selling online<br>
 
-    <h3>  BOOK NOW FOR EARLY BIRD PRICES  </h3>
-</div>
+                is vital to<br>
+                
+                business growth.</h1>
 
-<div class="image">
-    <img src="1.png" alt="group of people discussing and brain storming">
-</div>
-</div>
+                <p>2025 Grow Your e-Commerce Conference</p>
+                <br>
+                <p>September 16-18, 2025
+                    <br>
+                    Paragon One Plaza and Sky Garden</p>
+
+                <button>BOOK NOW FOR EARLY BIRD PRICES</button>
+        </div>
+
+    </div>
 
 </body>
 </html>
